Moved app to console directoryq
Windows conflict, can’t use name ‘con’ on directory.

--- a/dev/bld/Makefile
+++ b/dev/bld/Makefile
@@ -13,22 +13,25 @@
 CC     = clang++
 
 OBJDIR 	 = obj
+SDK = /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk
 
 
 ROOT		 = ..
 EXT_ROOT	 = $(ROOT)/ext
 
-CON_ROOT = con
+CON_ROOT = console
 SPIFF_ROOT = spiff
 TT_ROOT = timertest
 HAL_ROOT = hal
+HALNX_ROOT = hal_linux
 BIN_ROOT = bin
 BIN_DIR = $(BIN_ROOT)
 
-CONAPP_SRC = con
+CONAPP_SRC = console
 SPIFF_SRC = $(SPIFF_ROOT)
 TT_SRC = $(TT_ROOT)
 HAL_SRC = $(HAL_ROOT)
+HALNX_SRC = $(HALNX_ROOT)
 NXCORE_SRC = $(ROOT)/src
 NXCORE_INC = $(ROOT)/inc
 DPCOM_SRC = $(EXT_ROOT)/icom
@@ -64,19 +67,19 @@ CPPFLAGS =
 
 
 
-CPPFLAGS = -arch x86_64 -stdlib=libc++ -std=c++11
-CPPFLAGS += -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk
+CPPFLAGS = -g -arch x86_64 -stdlib=libc++ -std=c++11
+CPPFLAGS += -isysroot $(SDK)
 CPPFLAGS += $(INCLUDE_FILES)
 
-CFLAGS = -arch x86_64 -std=c99
-CFLAGS += -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk
+CFLAGS = -g -arch x86_64 -std=c99
+CFLAGS += -isysroot $(SDK)
 CFLAGS += $(INCLUDE_FILES)
 
 
 
 # Linker settings
 LD = clang++
-LDFLAGS =  -dynamiclib -arch x86_64 -stdlib=libc++
+LDFLAGS = -dynamiclib -arch x86_64 -stdlib=libc++
 LDFLAGS += $(LIB_FILES)
 
 
@@ -88,7 +91,7 @@ MAIN_LINK_LIBS += $(LIB_FILES) -L. -lnxcore -lutils
 BASS_LIB = $(BASS_DIR)/libbass.dylib
 
 CONAPP_SRC_FILES = \
-	con/conapp.cpp
+	console/conapp.cpp
 
 SPIFF_SRC_FILES = \
 	$(SPIFF_SRC)/spiff.cpp
@@ -99,9 +102,16 @@ TT_SRC_FILES = \
 HAL_SRC_FILES = \
 	$(HAL_SRC)/hal.cpp
 
+HALNX_SRC_FILES = \
+	$(HALNX_SRC)/hal_linux.cpp \
+	$(HALNX_SRC)/context_test1.cpp \
+	$(HALNX_SRC)/context_test2.cpp \
+	$(HALNX_SRC)/context_test3.cpp 
+
 NXCORE_SRC_FILES = \
 	$(NXCORE_SRC)/prototype.cpp \
 	$(NXCORE_SRC)/core/timer.cpp \
+	$(NXCORE_SRC)/core/event.cpp \
 	$(NXCORE_SRC)/core/system.cpp \
 	$(NXCORE_SRC)/core/config.cpp \
 	$(NXCORE_SRC)/messagerouter/filewriter.cpp \
@@ -129,9 +139,10 @@ CONAPP_OBJ_FILES := $(patsubst %.cpp,%.o,$(CONAPP_SRC_FILES))
 SPIFF_OBJ_FILES := $(patsubst %.cpp,%.o,$(SPIFF_SRC_FILES))
 TT_OBJ_FILES := $(patsubst %.cpp,%.o,$(TT_SRC_FILES))
 HAL_OBJ_FILES := $(patsubst %.cpp,%.o,$(HAL_SRC_FILES))
+HALNX_OBJ_FILES := $(patsubst %.cpp,%.o,$(HALNX_SRC_FILES))
 
 # Default: Build all tests
-all: utils nxcore conapp spiff tt hal plugins
+all: utils nxcore conapp spiff tt hal halnx plugins
 
 .PHONY: plugins $(PLUGINS_DIRS)
 
@@ -150,17 +161,21 @@ tt: $(TT_OBJ_FILES) utils nxcore
 hal: $(HAL_OBJ_FILES) utils nxcore
 	$(CC) $(CFLAGS) $(HAL_OBJ_FILES) $(MAIN_LINK_LIBS) -o $(BIN_DIR)/hal
 
+halnx: $(HALNX_OBJ_FILES) utils nxcore
+	$(CC) $(CFLAGS) $(HALNX_OBJ_FILES) $(MAIN_LINK_LIBS) -o $(BIN_DIR)/hal_linux
+
 conapp: $(CONAPP_OBJ_FILES) utils nxcore
 	$(CC) $(CFLAGS) $(CONAPP_OBJ_FILES) $(MAIN_LINK_LIBS) -o $(BIN_DIR)/conapp
 
 nxcore: $(NXCORE_OBJ_FILES) utils
 	echo $(NXCORE_OBJ_FILES)
 	$(LD) $(LDFLAGS) $(NXCORE_OBJ_FILES) $(NXCORE_LINK_LIBS) -o libnxcore.a
-	cp libnxcore.a $(BIN_DIR)
+	cp libnxcore.a $(BIN_DIR)/.
+	
 
 utils: $(UTILS_OBJ_FILES)
-	$(LD) $(LDFLAGS) $(UTILS_OBJ_FILES) -o libutils.a
-	cp libutils.a $(BIN_DIR)
+	$(LD) $(LDFLAGS) $(UTILS_OBJ_FILES) -v -o libutils.a
+	cp libutils.a $(BIN_DIR)/.
 
 ## - compile all plugins by calling recursive make's
 plugins: $(PLUGINS_DIRS) utils
@@ -168,8 +183,14 @@ $(PLUGINS_DIRS):
 	$(MAKE) -C $@ PLUGIN_NAME=$(@F)
 	cp $@/lib$(@F).dylib $(PLUGIN_DEST_DIR)
 
-clean: cleanspiff cleanconapp cleanutils cleannxcore cleanplugins
+clean: cleanspiff cleanconapp cleanutils cleannxcore cleanplugins cleanhal
 	echo cleaned
+
+cleanhal:
+	rm $(HAL_OBJ_FILES)
+	rm $(HALNX_OBJ_FILES)
+	rm $(BIN_DIR)/hal
+	rm $(BIN_DIR)/hal_linux
 
 cleanconapp:
 	rm $(CONAPP_OBJ_FILES)
@@ -181,9 +202,11 @@ cleanspiff:
 
 cleanutils:
 	rm $(UTILS_OBJ_FILES) $(BIN_DIR)/libutils.a 
+	rm libutils.a
 
 cleannxcore:
 	rm $(NXCORE_OBJ_FILES) $(BIN_DIR)/libnxcore.a 
+	rm libnxcore.a
 
 
 cleanplugins:
